[gd_scene load_steps=7 format=3 uid="uid://m37v6klf1b7r"]

[ext_resource type="Script" path="res://Scripts/Verbal/Player/HeartBeatSFX.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/Verbal/Player/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://06fxn7rtnic4" path="res://Assets/Textures/Entity Graphics/Player/player.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dwcu8uml7ndj0" path="res://Assets/Textures/Map Graphics/pictureLightMask.png" id="4"]

[sub_resource type="CircleShape2D" id="6"]
radius = 17.0294

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(6.125, 13)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
rotation = -1.5708
collision_mask = 26
script = ExtResource("2")

[node name="PlayerCamera" type="Camera2D" parent="."]
limit_smoothed = true
position_smoothing_enabled = true

[node name="PlayerGraphic" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("3")

[node name="Tween" type="Tween" parent="PlayerGraphic"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
script = null

[node name="PhysicalBody" type="CollisionShape2D" parent="."]
shape = SubResource("6")

[node name="BulletRoot" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="BulletRoot"]
position = Vector2(24, 8.7738e-05)

[node name="AttackBox" type="Area2D" parent="BulletRoot"]
position = Vector2(24, 8.7738e-05)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletRoot/AttackBox"]
position = Vector2(-0.124998, -4.52995e-06)
shape = SubResource("4")

[node name="InteractionCast" type="RayCast2D" parent="BulletRoot"]
target_position = Vector2(40, 0)
collision_mask = 56
collide_with_areas = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("1")

[node name="PointLight2D" type="PointLight2D" parent="."]
z_index = -1
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 2.5
texture = ExtResource("4")

[connection signal="body_entered" from="BulletRoot/AttackBox" to="." method="_on_AttackBox_body_entered"]
[connection signal="body_exited" from="BulletRoot/AttackBox" to="." method="_on_AttackBox_body_exited"]
